--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   </head>
   <body>
-    <div id="main">Howdy</div>
+    <div id="main">Make a new blog post!</div>
   </body>
   <script src="build/bundle.js"  charset="utf-8"></script>
 </html>
